--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "test": "jest",
+    // "test-only": "jest -- src/services/post/__tests__/post.test.ts",
     "format": "prettier --write .",
     "lint": "eslint .",
     "type-check": "tsc"
